cloud-proxy/cmd/cloud-proxy/k8s/02-cloud-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: cloud-proxy
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-proxy
  template:
    metadata:
      labels:
        app: cloud-proxy
    spec:
      containers:
        - name: cloud-proxy
          # image: web3eye/cloud-proxy:latest
          image: coastlinesss/cloud-proxy:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/CloudProxy
      volumes:
        - name: service-config
          configMap:
            name: cloud-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-proxy
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  ports:
    - name: grpc
      port: 30121
      targetPort: 30121
    - name: healthz
      port: 30122
      targetPort: 30122
  selector:
    app: cloud-proxy
